<resources>
    <string name="cal360_app_name">cal360</string>
    <string name="cal360_hint_username">Username</string>
    <string name="cal360_hint_password">Password</string>
    <string name="cal360_button_next">Next</string>
    <string name="cal360_button_cancel">Cancel</string>
    <string name="cal360_error_password">Password must contain at least 8 characters.</string>
    <string name="cal360_filter_title">Filter</string>
    <string name="cal360_search_title">Search</string>
    <string name="cal360_product_title">Title</string>
    <string name="cal360_product_description">Secondary text</string>

    <!-- cal360ine backdrop menu labels -->
    <string name="cal360_featured_label">Featured</string>
    <string name="cal360_apartment_label">Apartment</string>
    <string name="cal360_accessories_label">Accessories</string>
    <string name="cal360_shoes_label">Shoes</string>
    <string name="cal360_tops_label">Tops</string>
    <string name="cal360_bottoms_label">Bottoms</string>
    <string name="cal360_dresses_label">Dresses</string>
    <string name="cal360_account_label">My Account</string>
    
    <string name="cal360_settings">Settings</string>
    <string name="cal360_trash">Trash</string>
    <string name="cal360_spam">Spam</string>
    <string name="cal360_inbox">Inbox</string>
    <string name="cal360_starred">Starred</string>
    <string name="cal360_sent_mail">Sent Mail</string>
    <string name="cal360_drafts">Drafts</string>
    <string name="cal360_categories">Categories</string>
    <string name="cal360_drawer_open">Open navigation drawer</string>
    <string name="cal360_drawer_close">Close navigation drawer</string>
    <string name="MAP_API_KEY">AIzaSyBjgDpFA-AQM1KtRgkC97L3BUMieEam4Dw</string>
</resources>
