<?xml version="1.0" encoding="utf-8"?>
<merge xmlns:android="http://schemas.android.com/apk/res/android">

    <android.support.design.button.MaterialButton
        style="@style/Widget.Cal360.Button.TextButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cal360_featured_label" />

    <android.support.design.button.MaterialButton
        style="@style/Widget.Cal360.Button.TextButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cal360_apartment_label" />

    <android.support.design.button.MaterialButton
        style="@style/Widget.Cal360.Button.TextButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cal360_accessories_label" />

    <android.support.design.button.MaterialButton
        style="@style/Widget.Cal360.Button.TextButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cal360_shoes_label" />

    <android.support.design.button.MaterialButton
        style="@style/Widget.Cal360.Button.TextButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cal360_tops_label" />

    <android.support.design.button.MaterialButton
        style="@style/Widget.Cal360.Button.TextButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cal360_bottoms_label" />

    <android.support.design.button.MaterialButton
        style="@style/Widget.Cal360.Button.TextButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cal360_dresses_label" />

    <View
        android:layout_width="56dp"
        android:layout_height="1dp"
        android:layout_margin="16dp"
        android:background="?android:attr/textColorPrimary" />

    <android.support.design.button.MaterialButton
        style="@style/Widget.Cal360.Button.TextButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cal360_account_label" />

</merge>
